# ExamCard

./: ExamCard.sln  README.md  TODO
ClassLibrary1/: Class1.cs  ClassLibrary1.csproj  ExamCard.cs
ClassLibrary10/: ClassLibrary10.csproj  MainSysType.cs
ClassLibrary2/: ClassLibrary2.csproj  PatientPosition.cs
ClassLibrary3/: ClassLibrary3.csproj  MainSysType.cs
ClassLibrary4/: ClassLibrary4.csproj  ExamCardData.cs
ClassLibrary5/: ClassLibrary5.csproj  HtmlItemDescription.cs
ClassLibrary6/: ClassLibrary6.csproj  RelationshipManagerData.cs
ClassLibrary7/: ClassLibrary7.csproj  SingleScan.cs
ClassLibrary8/: ClassLibrary8.csproj  ScanProcedure.cs
ClassLibrary9/: ClassLibrary9.csproj  DynamicScanDelayMode.cs
ConsoleApp/: ConsoleApp.csproj  Program.cs
data/: 104165610_ExamCard_Raw.ExamCard  PHANTOM_QT1_SLU_20151230.ExamCard  TODO  run.sh  (+6 more)
data/SR_ADULT_007/: 0f76cdd8-ab26-468d-bc77-ea9ad102054f.raw  129b722d-2d1f-40f9-ab6c-932c80cce31e.raw  228ae946-ef11-4203-9807-8fc3a2b788bd.raw  3D-SPGR-04-T1_MAP.raw  3D-SPGR-10_T1_MAP.raw  3D-SPGR-30_T1_MAP.raw  3d4d2db0-2625-4212-8767-3c0372d7d699.raw  5216eb55-abe1-4c0f-9790-477cd8946f38.raw  6561d006-235b-4bc9-95d7-21e81fd98672.raw  743025bc-67ed-498e-a1bb-4a56810d4bb5.raw  8be49542-e31d-47fc-b83d-3f166414870b.raw  CMakeLists.txt  DTI32_b800_TOPUP.raw  DTI64_b2000_TOPUP.raw  DTI6_b1_PA_TOPDN.raw  FLASH30_6echo.raw  FLASH5_6echo.raw  README.md  Ref_Head_32.raw  SEIREPI_TI0400.raw  SEIREPI_TI1200.raw  SEIREPI_TI2400.raw  WE_MEMPRAGE_DEFGRAD.raw  dump.c  dump2.c  dump3.c  examcard.c  examcard2xml.c  get.c  test.c
(+29 files in other folders)
